--- a/css/collapse.css
+++ b/css/collapse.css
@@ -6,6 +6,9 @@ body{
 .text-center {
   text-align: center;
 }
+.text-left {
+  text-align: left;
+}
 
 h1 {
   font-size: 58pt;
@@ -41,10 +44,18 @@ button {
 .codebox {
   background-color: #333;
   color: #ddd;
-  margin: 1% 0;
+  margin: 5% 0;
   padding: 1%;
-  width: 600px;
+  min-width: 95%;
+  text-align: left;
+  padding-left: 2%;
+  font-family: 'Ubuntu Mono', monospace;
 }
+.codebox:before {
+  content: "\0024";
+  padding-right: 3%;
+}
+
 
 .get-started{
   font-size: 18pt;
