--- a/css/collapse.css
+++ b/css/collapse.css
@@ -1,6 +1,11 @@
+html{
+  scroll-behavior: smooth;
+}
+
 body{
-  background-color: #121212;
-  color: #f2f2f2;
+  background-color: #121212!important;
+  color: #f2f2f2!important;
+  letter-spacing: 1px;
 }
 
 .text-center {
@@ -11,23 +16,162 @@ body{
 }
 
 h1 {
-  font-size: 58pt;
+  font-size:8rem;
+  line-height: 10rem;
 }
 h2 {
-  font-size: 34pt;
+  font-size: 5rem;
+  font-weight: 500;
 }
+
+h2#header-h2{
+  font-size:3rem;
+  font-weight: 400;
+}
+
+
 h3{
-  font-size: 20pt;
+  font-size: 2.3rem;
+  font-weight: 400;
 }
 
 button {
   border-radius: 6px;
+  
 }
 
-.header-button button{
-  font-size: 20pt;
-  background-color: #333;
+p{
+  font-size: 2.2rem;
+  font-weight: 300;
+
 }
+
+.p-pay{
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto
+}
+
+.p-install{
+  font-size: 1.7rem;
+  margin: 0;  
+  padding: 2% 0% 1% 0%;
+}
+
+
+.h3-features{
+  font-size: 2.5rem;
+  font-weight: 400; 
+  color:#fed3ff;r
+}
+
+.card-features{
+  background-color: black;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.pt-5{
+  padding-top: 5rem;
+}
+
+.p-card{
+  padding: 5% 0%;
+}
+
+.logo{
+  width:auto;
+  height: 60px;
+  float: left;
+  padding: 8px;
+  margin: auto;
+  
+}
+
+
+.fade-0{
+  opacity: 1;
+  animation-name: fade;
+  animation-delay: 0;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
+}
+
+.fade-1{
+  opacity: 1;
+  animation-name: fade;
+  animation-delay: .2s;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
+}
+
+.fade-2{
+  opacity: 1;
+  animation-name: fade;
+  animation-delay: .4s;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
+}
+
+.fade-3{
+  opacity: 1;
+  animation-name: fade;
+  animation-delay: .6s;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
+}
+
+.fade-4{
+  opacity: 1;
+  animation-name: fade;
+  animation-delay: .8s;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
+}
+
+/* TORUS ANIMATION */
+@keyframes fade{
+  0% {opacity:0}
+
+  50% {opacity: 1;}
+  
+ 
+  100% {opacity:0}
+
+}
+
+#color-change{
+  animation: color 10s infinite;
+}
+
+@keyframes color{
+  0% { color: red; }
+  50% { color: blue; }
+  100% { color: red; }
+}
+
+
+.header-button button{
+
+    border: none;
+    text-decoration: none;
+    color: #fafafa;
+    font-size: 2.5rem;
+    border-radius: 10px;
+    display: inline-block;
+    transition: all .3s;
+    padding: 1rem 4rem;
+    margin: 0% 1%;
+    background-color: #45367c;
+    letter-spacing: 2px;
+    
+  }
+  .header-button button:hover{
+  transform: scale(1.05);
+  background-color: #cc00ff;
+  }
+
+
 
 .deploy-video{
   width: 100%;
@@ -50,6 +194,8 @@ button {
   text-align: left;
   padding-left: 2%;
   font-family: 'Ubuntu Mono', monospace;
+  font-size: 2rem;
+  border: none;
 }
 .codebox:before {
   content: "\0024";
@@ -58,34 +204,112 @@ button {
 
 
 .get-started{
-  font-size: 18pt;
+  font-size: 2.2rem;
   list-style-position: inside;
 }
 
 
+.grid-features{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  transition: 1s all;
+  gap: 1rem;
+  text-align: left;
+  }
+
+.grid-benefits{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 2rem;
+  text-align: left;
+  font-size: 2rem!important;
+
+}
+
+.grid-benefits p {
+font-size: 1.8rem;
+}
+
+.grid-sdk{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 2rem;
+  transition: 1s all;
+  text-align: left;
+}
+
+.card-sdk{
+  padding: 1rem;
+  /* background-color: #002f57; */
+  border-radius: 10pt;
+  height: auto;
+  text-align: left;
+}
+
+.card-sdk p{
+  margin:0;
+}
+.card-sdk h3{
+  margin:0;
+}
+
+.no-bullet{
+  list-style-type: none; 
+  margin: 0;
+  padding: 0% 0% 4% 5%;
+
+}
+
+.table-features{
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+.pl-5{
+  padding-left: 5%;
+}
 .card {
-  background-color: #333;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  /* background-color: #1a1533; */
+  box-shadow: 0 4px 8px 0 rgb(85, 0, 110);
   transition: 0.3s;
-  padding: 1%;
-  border-radius: 6px;
+  padding: 1rem;
+  border-radius: 10px;
+  height: auto;
+  border: 1px solid #5237db;
+  display: inline-block;
 }
 .card-title {
-  font-size: 26pt;
-  margin-bottom: -3px;
+  font-size: 3rem;
+  margin: 0;
+  font-weight: 500;
+  text-align: left;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 16px 0 rgb(98, 0, 255);
+  transform: scale(1.05);
 }
 
+
+/* FOOTER */
+.footer-torus{
+  padding: 2rem 3rem;
+  background-color: #242424;
+  text-align: right;
+}
+
+.footer-text{
+  text-decoration: none;
+}
 
 /* COLLAPSE */
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
+  background-color: transparent;
   overflow: hidden;
+  padding: 1% 4%;
 }
 
 /* Style the links inside the navigation bar */
@@ -100,16 +324,27 @@ button {
 
 .nav-logo {
   font-size: 26pt;
+  margin-top: -7pt;
+  
 }
 .nav-links {
   float: right;
-  font-size: 20pt;
+  font-size: 1.7rem;
 }
 
+
+tr {
+padding: 1rem;  
+}
+td{
+  max-width: 150px;
+  padding: 1rem;
+}
+
+
 /* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.topnav a span:hover {
+  color:#cc00ff;
 }
 
 /* Add an active class to highlight the current page */
@@ -129,6 +364,8 @@ button {
     float: right;
     display: block;
   }
+  
+  
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@@ -145,3 +382,78 @@ button {
     text-align: left;
   }
 }
+
+@media (min-width: 6px)
+{
+
+}
+
+@media (min-width: 768px){
+  .grid-benefits{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
+  
+  }
+
+}
+
+@media (min-width: 991px){
+  .grid-benefits{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 2rem;
+  
+  }
+
+}
+
+
+@media (min-width: 1200px){
+.container {
+    width: 969px!important;
+}}
+
+
+/* BOARD */
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+.rect-border{
+  stroke-dasharray: 2000;
+  stroke-dashoffset: 2000;
+  animation: dash .9s linear forwards;
+}
+
+.cls-1{stroke:aqua;stroke-width:3px;}
+.cls-1,
+.cls-10,
+.cls-6,
+.cls-7,
+.cls-8,
+.cls-9{stroke-miterlimit:10;}
+.cls-2{fill:lime;}
+.cls-2,
+.cls-5,
+.cls-8{opacity:0.25;}
+.cls-3{opacity:0.4;}
+.cls-4{fill:#fff;}
+.cls-5{fill:#ff0;}
+.cls-6{fill:#e0e0e0;}
+.cls-6,
+.cls-8{stroke:#fff;}
+.cls-10,
+.cls-7,
+.cls-9{fill:none;opacity:0.75;}
+.cls-7{stroke:#ff0;}
+.cls-10,
+.cls-7,
+.cls-8,
+.cls-9{stroke-width:2px;}
+.cls-8{fill:#f0f;}
+.cls-9{stroke:#f0f;}
+.cls-10{stroke:lime;}
