--- a/css/collapse.css
+++ b/css/collapse.css
@@ -46,10 +46,14 @@ p{
 
 }
 
+ol {
+  padding-left: 0;
+}
+
 .p-pay{
-  max-width: 750px;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
+  text-align: center;
 }
 
 .p-install{
@@ -72,7 +76,7 @@ p{
 }
 
 .pt-5{
-  padding-top: 5rem;
+  padding-top: 10rem;
 }
 
 .p-card{
@@ -190,7 +194,7 @@ p{
   color: #ddd;
   margin: 5% 0;
   padding: 1%;
-  min-width: 95%;
+  min-width: 100%;
   text-align: left;
   padding-left: 2%;
   font-family: 'Ubuntu Mono', monospace;
@@ -207,11 +211,19 @@ p{
   font-size: 2.2rem;
   list-style-position: inside;
 }
+.grid-get-started{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(305px, 1fr));
+  transition: 1s all;
+  gap: 1rem;
+  text-align: left;
+  }
+
 
 
 .grid-features{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(305px, 1fr));
   transition: 1s all;
   gap: 1rem;
   text-align: left;
@@ -260,9 +272,24 @@ font-size: 1.8rem;
 
 }
 
+.no-bullet-price{
+  list-style-type: bullet; 
+  list-style-position: inside;
+  margin: 0;
+  padding: 2rem;
+  font-size: 2rem;
+  font-weight: 300;
+  text-align: left;
+
+}
+
 .table-features{
   margin-right: auto;
   margin-left: auto;
+  font-size: 18px;
+  font-weight: 300;
+  border-collapse: collapse;
+
 }
 
 
@@ -276,19 +303,64 @@ font-size: 1.8rem;
   padding: 1rem;
   border-radius: 10px;
   height: auto;
-  border: 1px solid #5237db;
+  /* border: 1px solid #5237db; */
   display: inline-block;
+  align-content: center;
+  justify-content: center;
+
 }
 .card-title {
   font-size: 3rem;
   margin: 0;
   font-weight: 500;
-  text-align: left;
+  text-align: center;
+}
+
+.card-title-2 {
+  font-size: 3.5rem;
+  margin: 1rem 0rem;
+  padding: 1rem;
+  font-weight: 500;
+  text-align: center; 
+  width:100%;
+  /* background-color: #45367c; */
+  border-radius: 8px 8px 0px 0px;
+}
+
+.card-free{
+font-size: 3rem;
+font-weight: 400;
+background-color:#45367c ;
+}
+
+.no-bullet-price li {
+  padding-bottom: 2rem;
+}
+
+.card-pricing {
+  /* background-color: #1a1533; */
+  box-shadow:
+  -8px -8px 12px 0 rgba(74,14,82, .4),
+  12px 12px 16px rgba(74,14,82, .7);
+  transition: 0.3s;
+  border-radius: 10px;
+  height: auto;
+  /* border: 1px solid #5237db; */
+  display: inline-block;
+  max-width: AUTO;
+}
+
+.m-0{
+  margin:0;
+}
+
+#free-tier{
+  padding-top: 0!important;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgb(98, 0, 255);
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
 }
 
 
@@ -332,13 +404,27 @@ font-size: 1.8rem;
   font-size: 1.7rem;
 }
 
-
-tr {
-padding: 1rem;  
-}
 td{
   max-width: 150px;
   padding: 1rem;
+
+}
+th{
+  background-color: #45367c;
+  padding: 1rem 4rem 1rem 1rem;
+  text-align: left;
+}
+
+table{
+  border-collapse: separate;
+  text-align: left;
+  border-spacing: 2px;
+  display: grid;
+  temp
+}
+
+tr#row-aws, #row-godaddy{
+  background-color: rgba(135, 207, 235, 0.153);
 }
 
 
@@ -383,10 +469,13 @@ td{
   }
 }
 
-@media (min-width: 6px)
-{
-
+.container {
+    padding-right: 25px;
+    padding-left: 25px;
+    margin-right: auto;
+    margin-left: auto;
 }
+
 
 @media (min-width: 768px){
   .grid-benefits{
@@ -457,3 +546,16 @@ td{
 .cls-8{fill:#f0f;}
 .cls-9{stroke:#f0f;}
 .cls-10{stroke:lime;}
+
+
+.pricing-plan-card {
+  --gutter: 0.8rem;
+  height: 100%;
+  box-shadow: 0 4px 20px rgba(0,0,0,.12);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--color-gray-1);
+  border: 4px transparent solid;
+  padding: var(--gutter);
+}
