--- a/css/collapse.css
+++ b/css/collapse.css
@@ -16,8 +16,8 @@ body{
 }
 
 .header-h1 {
-  font-size: 6rem;
-  line-height: 7.5rem;
+  font-size: 5.5rem;
+  line-height: 7rem;
   margin-bottom: 3rem;
 }
 h2 {
@@ -137,7 +137,7 @@ ol {
 .card-features{
   padding: 2rem;
   border-radius: 10px;
-  box-shadow: 6px 6px 8px 0 rgba(0, 0, 0, 0.6), -4px -4px 6px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 6px 6px 8px 0 rgba(0, 0, 0, 0.4), -4px -4px 6px 0 rgba(0, 0, 0, 0.2);
 
 }
 
@@ -157,10 +157,10 @@ ol {
 .neumorphic-1{
   box-shadow: 
   12px 12px 12px 0 rgba(0, 0, 0, 0.6),
-  -8px -8px 6px 0 rgba(6, 6, 6, 0.6);
+  -8px -8px 18px 0 rgba(30, 30, 30, 0.4);
   padding: 2rem;
   border-radius: 10px;
-  margin: 2rem 0rem;
+  margin: 0rem;
 }
 
 .pt-5{
@@ -257,7 +257,6 @@ ol {
 
 #color-change{
   animation: color 25s infinite;
-  font-size: 8rem;
 }
 
 @keyframes color{
@@ -277,7 +276,7 @@ ol {
     font-size: 1.8rem;
     border-radius: 8px;
     display: inline-block;
-    transition: all .3s;
+    /* transition: all .3s; */
     padding: 1rem 2rem;
     margin: 0 1rem 1rem 0;
     background-color: transparent;
@@ -314,7 +313,7 @@ ol {
   text-align: left;
   padding-left: 2%;
   font-family: 'Ubuntu Mono', monospace;
-  font-size: 2rem;
+  font-size: 1.6rem;
   border: none;
 }
 .codebox:before {
@@ -341,10 +340,9 @@ ol {
 }
 .grid-get-started{
   display: grid;
-  transition: 1s all;
-  gap: 1rem;
+  /* transition: 1s all; */
   text-align: left;
-  grid-gap: 2rem;
+  grid-gap: 5rem;
   }
 
 .img-diagram{
@@ -376,7 +374,7 @@ ol {
 .grid-features{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  transition: 1s all;
+  /* transition: 1s all; */
   gap: 2rem;
   text-align: left;
   }
@@ -384,7 +382,7 @@ ol {
 .grid-benefits{
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 2rem;
+  grid-gap: 3rem;
   text-align: left;
   font-size: 2rem!important;
 
@@ -399,7 +397,7 @@ text-align: center;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 3rem;
-  transition: 1s all;
+  /* transition: 1s all; */
   text-align: left;
 }
 
@@ -457,13 +455,42 @@ text-align: center;
 }
 
 
+.neumorphic-sdk{
+  box-shadow: 
+12px 12px 12px 0 rgba(0, 0, 0, 0.6),
+-8px -8px 10px 0 rgba(6, 6, 6, 0.4);
+  padding: 2rem;
+  border-radius: 10px;
+}
+
+
+.bg-gradient-button {
+  background-image: linear-gradient(to right, #00ff00,#00e1ff,#e2ff00,#e700ff);
+  border-radius: 8px;
+  font-size: 1.8rem;
+  display: inline-block;
+  /* transition: all .3s; */
+  margin: 0 1rem 1rem 0;
+  letter-spacing: 1.5px;
+}
+
+.bg-gradient-button:hover {
+  transform: scale(1.1);
+  background-color: rgba(17, 0, 31, .5)!important;
+}
+
+.bg-button{
+  background-color:rgba(17, 0, 31, .98);
+  border-radius: 8px;
+}
+
 .pl-5{
   padding-left: 5%;
 }
 .card {
   box-shadow:  6px 6px 8px 0 rgba(0, 187, 255, 0.1)inset,
   -6px -6px 8px 0 rgba(0, 187, 255, 0.1)inset;
-  transition: 0.3s;
+  /* transition: 0.3s; */
   padding: 2rem 2rem 1rem 2rem;;
   border-radius: 10px;
   height: auto;
@@ -472,8 +499,8 @@ text-align: center;
 }
 
 .card-title {
-  font-size: 4rem;
-  margin: 0;
+  font-size: 3.5rem;
+  margin: 0 0 0 5px;
   font-weight: 300;
   text-align: center;
   display: inline-block;
@@ -524,7 +551,7 @@ background-color:#45367c ;
   box-shadow:
   -8px -8px 12px 0 rgba(74,14,82, .4),
   12px 12px 16px rgba(74,14,82, .7);
-  transition: 0.3s;
+  /* transition: 0.3s; */
   border-radius: 10px;
   height: auto;
   /* border: 1px solid #5237db; */
@@ -585,8 +612,8 @@ background-color:#45367c ;
 .grid-cost {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  transition: 1s all;
-  column-gap: 6rem;
+  /* transition: 1s all; */
+  gap: 4rem;
   text-align: left;
 justify-items: center;
 }
@@ -657,13 +684,11 @@ input #Feedback {
 }
 
 .nav-logo {
-  font-size: 26pt;
-  margin-top: -7pt;
-  
+  font-size: 2.5rem;  
 }
 .nav-links {
   float: right;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
 }
 
 td{
@@ -701,6 +726,11 @@ tr#row-aws, #row-godaddy{
   border-radius: 10px;
   margin: 0;
 }
+
+@media (min-width: 550px){
+  
+}
+
 
 /* Change the color of links on hover */
 .topnav a span:hover {
@@ -759,7 +789,7 @@ tr#row-aws, #row-godaddy{
   }
 
   .header-h1 {
-    font-size: 7rem;
+    font-size: 6.5rem;
     line-height: 8rem;
     letter-spacing: 3px;
   
@@ -771,7 +801,7 @@ tr#row-aws, #row-godaddy{
   -8px -8px 6px 0 rgba(6, 6, 6, 0.6);
     padding: 2rem;
     border-radius: 10px;
-    margin: 2rem 10rem;
+    margin: 0rem 10rem;
   }
 
   
@@ -794,7 +824,7 @@ tr#row-aws, #row-godaddy{
   .grid-get-started{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    transition: 1s all;
+    /* transition: 1s all; */
     gap: 3rem;
     text-align: left;
     }
@@ -874,4 +904,11 @@ color: #cc00ff;
 }
 .p-1 {
   padding: 1rem;
+}
+
+
+.logo-footer{
+  height: 30px;
+  max-width: 55px;
+
 }
