--- a/css/collapse.css
+++ b/css/collapse.css
@@ -25,6 +25,11 @@ h2 {
   font-weight: 400;
 }
 
+h1{
+  font-size: 5rem;
+  font-weight: 500;
+}
+
 h2#header-h2{
   font-size:3rem;
   font-weight: 400;
@@ -253,8 +258,6 @@ ol {
 
 }
 
-
-
 #color-change{
   animation: color 25s infinite;
 }
@@ -266,7 +269,6 @@ ol {
   75% {color: rgb(43, 0, 255); }
   100% { color: rgb(47, 255, 47); }
 }
-
 
 .header-button button{
 
@@ -313,7 +315,7 @@ ol {
   text-align: left;
   padding-left: 2%;
   font-family: 'Ubuntu Mono', monospace;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   border: none;
 }
 .codebox:before {
@@ -340,7 +342,7 @@ ol {
 }
 .grid-get-started{
   display: grid;
-  /* transition: 1s all; */
+  
   text-align: left;
   grid-gap: 5rem;
   }
@@ -374,7 +376,7 @@ ol {
 .grid-features{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  /* transition: 1s all; */
+  
   gap: 2rem;
   text-align: left;
   }
@@ -397,7 +399,7 @@ text-align: center;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 3rem;
-  /* transition: 1s all; */
+  
   text-align: left;
 }
 
@@ -451,6 +453,8 @@ text-align: center;
   font-size: 18px;
   font-weight: 300;
   border-collapse: collapse;
+  overflow-x: auto;
+  border-radius: 8px;
 
 }
 
@@ -462,6 +466,45 @@ text-align: center;
   padding: 2rem;
   border-radius: 10px;
 }
+
+.neumorphic-table{
+  box-shadow: 
+12px 12px 12px 0 rgba(0, 0, 0, 0.6),
+-8px -8px 18px 0 rgba(6, 6, 6, 0.4);
+}
+
+
+
+
+
+
+
+
+
+::-webkit-scrollbar {
+  height: 15px; /*for vertical scrollbar*/
+  width: 15px;  /*for horizontal scrollbar*/
+  border: 2px solid #5a06a4;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #5a06a4;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #2e0055;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 .bg-gradient-button {
@@ -477,7 +520,10 @@ text-align: center;
 .bg-gradient-button:hover {
   transform: scale(1.1);
   background-color: rgba(17, 0, 31, .5)!important;
+  transition: .3s all;
 }
+
+
 
 .bg-button{
   background-color:rgba(17, 0, 31, .98);
@@ -612,7 +658,7 @@ background-color:#45367c ;
 .grid-cost {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  /* transition: 1s all; */
+  
   gap: 4rem;
   text-align: left;
 justify-items: center;
@@ -824,7 +870,7 @@ tr#row-aws, #row-godaddy{
   .grid-get-started{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    /* transition: 1s all; */
+    
     gap: 3rem;
     text-align: left;
     }
@@ -892,7 +938,7 @@ color: #cc00ff;
 }
 
 .done {
-  padding: 1px;
+  padding: 2px;
 }
 .bg-gradient-primary {
   background-image: linear-gradient(to right, #00ff00,#00e1ff,#e2ff00,#e700ff);
@@ -912,3 +958,5 @@ color: #cc00ff;
   max-width: 55px;
 
 }
+
+
