--- a/css/collapse.css
+++ b/css/collapse.css
@@ -107,12 +107,12 @@ color: rgb(0, 255, 229);
   background-image: linear-gradient(45deg, rgba(12,12,12,1), rgba(24,24,24,1));
 }
 
-p{
+/* p{
   font-size: 2.2rem;
   font-weight: 300;
   color: #c3c3c3;
 
-}
+} */
 
 ol {
   padding-left: 0;
@@ -753,7 +753,7 @@ tr#row-aws, #row-godaddy{
 
 .nav-links {
   float: right;
-  font-size: 1.5rem;
+  font-size: 18px;
 }
 
 
@@ -829,7 +829,7 @@ tr#row-aws, #row-godaddy{
 
 .nav-logo {
   text-align: left;
-  font-size: 2.5rem;
+  font-size: 30px;
   padding-left: 0px !important;  
 }
 
