--- a/css/collapse.css
+++ b/css/collapse.css
@@ -164,6 +164,11 @@ ol {
     font-weight: 300;
 }
 
+.p-quote{
+  font-size: 2.3rem;
+  font-weight: 300;
+  margin: 0; 
+}
 
 .neumorphic-1{
   box-shadow: 
